--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+body {
+  background-image: url("/bg-big.png");
+  background-repeat: repeat-x;
+  background-size: contain; 
+}
