--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,41 @@ body {
   background-repeat: repeat-x;
   background-size: contain; 
 }
+
+@keyframes glow {
+  0%, 100% {
+    box-shadow: 0 0 6px #facc15, 0 0 12px #facc15;
+  }
+  50% {
+    box-shadow: 0 0 12px #facc15, 0 0 24px #facc15;
+  }
+}
+
+.animate-glow {
+  animation: glow 2s ease-in-out infinite;
+}
+.curl-corner {
+  clip-path: polygon(0 100%, 100% 0, 100% 100%);
+}
+.papers, .papers:before, .papers:after  {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.paper {
+  background: #fff;
+  box-shadow:
+    /* The top layer shadow */
+    0 1px 1px rgba(0,0,0,0.15),
+    /* The second layer */
+    0 10px 0 -5px #eee,
+    /* The second layer shadow */
+    0 10px 1px -4px rgba(0,0,0,0.15),
+     /* The third layer */
+    0 20px 0 -10px #eee,
+    /* The third layer shadow */
+    0 20px 1px -9px rgba(0,0,0,0.15);
+    /* Padding for demo purposes */
+    padding: 30px;
+}
