--- a/src/index.css
+++ b/src/index.css
@@ -70,10 +70,15 @@ button:focus-visible {
 }
 
 body {
-  background-image: url("/bg-big.png");
+  margin: 0;
+  padding: 0;
+  background-image: url('/bg-big.png');
   background-repeat: repeat-x;
-  background-size: contain; 
+  background-size: auto 100vh;
+  background-position: bottom left; 
+  background-attachment: fixed;
 }
+
 
 @keyframes glow {
   0%, 100% {
