--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+.button-yellow {
  font-size: 11px;
   font-weight: 500;
   font-family: 'Courier New', Courier, monospace;
@@ -48,7 +48,7 @@ button {
   transition: all 0.2s ease-in-out;
   z-index: 0;
 }
-button::before {
+.button-yellow::before {
   content: "";
   position: absolute;
   top: 0;
@@ -66,7 +66,7 @@ button::before {
   z-index: -1;
 }
 
-button:hover {
+.button-yellow:hover {
   background: linear-gradient(135deg, #fcd34d, #fde68a);
   transform: skewX(0deg) scale(1.05);
   box-shadow: 2px 2px 0 #eab308, 5px 5px 0 #ca8a04;
