--- a/src/index.css
+++ b/src/index.css
@@ -139,12 +139,16 @@ body {
 }
 
 @media (max-width: 767px) {
-   body {
-    position: relative;
-    background: #1e293b;
-    background-size: auto 100vh;
-    background-repeat: no-repeat;
-    margin: 0;
-    padding: 0;
+  body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  background-color: #011930;
+  background-image:
+    linear-gradient(to right, rgba(79, 79, 79, 0.18) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(79, 79, 79, 0.18) 1px, transparent 1px);
+  background-size: 14px 24px;
+  background-repeat: repeat;
+  position: relative;
   }
 }
