--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
